# serde_fix

./: Cargo.toml  README.md
code_generator/: Cargo.toml  README.md
code_generator/src/: main.rs
enum_checker/: Cargo.toml  README.md
enum_checker/src/: main.rs
fix40/: Cargo.toml
fix40/src/: standard_message_header.rs
fix40/src/messages/: advertisement.rs  allocation.rs  allocation_ack.rs  dont_know_trade.rs  email.rs  execution_report.rs  indication_of_interest.rs  list_cancel_request.rs  list_status.rs  list_status_request.rs  logon.rs  logout.rs  mod.rs  new_order_list.rs  new_order_single.rs  news.rs  order_cancel_reject.rs  order_cancel_replace_request.rs  order_cancel_request.rs  order_status_request.rs  quote.rs  quote_request.rs  reject.rs  sequence_reset.rs
fix41/: Cargo.toml
fix41/src/: standard_message_header.rs  standard_message_trailer.rs
fix42/: Cargo.toml
fix42/src/: lib.rs  standard_message_header.rs  standard_message_trailer.rs
fix43/: Cargo.toml
fix43/src/: commission_data.rs  instrument.rs  instrument_leg.rs  lib.rs  nested_parties.rs  order_qty_data.rs  parties.rs  spread_or_benchmark_curve_data.rs  standard_message_header.rs  stipulations.rs  underlying_instrument.rs  yield_data.rs
fix44/: Cargo.toml
fix44/src/: commission_data.rs  discretion_instructions.rs  expiration_qty.rs  financing_details.rs  instrument.rs  instrument_extension.rs  instrument_leg.rs  leg_benchmark_curve_data.rs  leg_stipulations.rs  lib.rs  nested_parties.rs  nested_parties_2.rs  nested_parties_3.rs  order_qty_data.rs  parties.rs  peg_instructions.rs  position_amount_data.rs  position_qty.rs  settl_instructions_data.rs  settl_parties.rs  settlement_parties.rs  spread_or_benchmark_curve_data.rs  standard_message_header.rs  standard_message_trailer.rs  stipulations.rs  trd_reg_timestamps.rs  triggering_instruction.rs  underlying_amount.rs  underlying_instrument.rs  underlying_stipulations.rs  undly_instrument_parties.rs  yield_data.rs
fix50/: Cargo.toml
fix50/src/: commission_data.rs  display_instruction.rs  expiration_qty.rs  financing_details.rs  instrument.rs  instrument_extension.rs  instrument_leg.rs  instrument_parties.rs  leg_benchmark_curve_data.rs  leg_stipulations.rs  lib.rs  nested_parties.rs  nested_parties_2.rs  nested_parties_3.rs  order_qty_data.rs  parties.rs  peg_instructions.rs  position_amount_data.rs  position_qty.rs  root_parties.rs  side_trd_reg_ts.rs  spread_or_benchmark_curve_data.rs  standard_message_header.rs  stipulations.rs  trd_reg_timestamps.rs  triggering_instruction.rs  underlying_amount.rs  underlying_instrument.rs  underlying_stipulations.rs  undly_instrument_parties.rs  yield_data.rs
fix50sp1/: Cargo.toml
fix50sp1/src/: discretion_instructions.rs  expiration_qty.rs  financing_details.rs  instrument.rs  instrument_extension.rs  instrument_leg.rs  instrument_parties.rs  leg_benchmark_curve_data.rs  leg_stipulations.rs  lib.rs  nested_parties.rs  nested_parties_2.rs  nested_parties_3.rs  nested_parties_4.rs  order_qty_data.rs  parties.rs  peg_instructions.rs  position_qty.rs  root_parties.rs  security_trading_rules.rs  security_xml.rs  settl_instructions_data.rs  settl_parties.rs  side_trd_reg_ts.rs  spread_or_benchmark_curve_data.rs  standard_message_header.rs  stipulations.rs  trd_reg_timestamps.rs  triggering_instruction.rs  underlying_instrument.rs  underlying_stipulations.rs  undly_instrument_parties.rs  yield_data.rs
fix50sp1/src/messages/: adjusted_position_report.rs  advertisement.rs  allocation_instruction.rs  allocation_instruction_ack.rs  allocation_instruction_alert.rs  allocation_report.rs  allocation_report_ack.rs  application_message_report.rs  application_message_request.rs  application_message_request_ack.rs  assignment_report.rs  bid_request.rs  bid_response.rs  business_message_reject.rs  collateral_assignment.rs  collateral_inquiry.rs  collateral_inquiry_ack.rs  collateral_report.rs  collateral_request.rs  collateral_response.rs  confirmation.rs  confirmation_ack.rs  confirmation_request.rs  contrary_intention_report.rs  cross_order_cancel_replace_request.rs  cross_order_cancel_request.rs  derivative_security_list.rs  derivative_security_list_request.rs  derivative_security_list_update_report.rs  dont_know_trade.rs  email.rs  execution_report.rs  execution_report_acknowledgement.rs  indication_of_interest.rs  list_cancel_request.rs  list_execute.rs  list_status.rs  list_status_request.rs  list_strike_price.rs  market_data_incremental_refresh.rs  (+65 more)
fix50sp2/: Cargo.toml
fix50sp2/src/: additional_term_bond_ref_grp.rs  additional_term_grp.rs  affected_market_segment_grp.rs  affected_ord_grp.rs  alloc_ack_grp.rs  alloc_commission_data_grp.rs  alloc_grp.rs  alloc_regulatory_trade_id_grp.rs  appl_id_report_grp.rs  appl_id_request_ack_grp.rs  appl_id_request_grp.rs  application_sequence_control.rs  asset_attribute_grp.rs  attachment_grp.rs  attachment_keyword_grp.rs  attrb_grp.rs  auction_type_rule_grp.rs  average_price_detail.rs  base_trading_rules.rs  bid_comp_req_grp.rs  bid_comp_rsp_grp.rs  bid_desc_req_grp.rs  business_center_grp.rs  cash_settl_date.rs  cash_settl_date_business_center_grp.rs  cash_settl_dealer_grp.rs  cash_settl_term_grp.rs  clearing_account_type_grp.rs  clearing_price_parameters_grp.rs  clr_inst_grp.rs  coll_inq_qual_grp.rs  collateral_amount_grp.rs  collateral_reinvestment_grp.rs  commission_data.rs  (+695 more)
fix_common/: Cargo.toml
fix_common/src/: boolean.rs  currency.rs  encoded_text.rs  lib.rs  repeating_values.rs  separated_values.rs  version.rs  workarounds.rs
fix_common/src/datetime/: local_mkt_date.rs  utc_dateonly.rs  utc_timestamp.rs
fix_message/: Cargo.toml
fix_message/src/: fix40.rs  fix41.rs  fix42.rs  fix43.rs  fix44.rs  fixt11.rs  has_header.rs  header.rs  lib.rs
fix_message_viewer/: Cargo.toml
fix_message_viewer/src/: main.rs
fixt11/: Cargo.toml
serde_fix/: Cargo.toml  README.md
serde_fix/src/: de.rs  lib.rs
serde_fix/src/entities/: mod.rs
serde_fix/src/ser/: mod.rs  value.rs
serde_fix/tests/: test_deserialize.rs  test_serialize.rs
src/: de.rs  lib.rs
(+601 files in other folders)
