[package]
name = "code_generator"
version = "0.1.0"
authors = ["Marco Napetti <nappa85@therocktrading.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-lock = "2.3"
reqwest = "0.11"
regex = "1.4"
log = "0.4"
env_logger = "0.8"
structopt = "0.3"
convert_case = "0.4"
