[package]
name = "enum_checker"
version = "0.1.0"
authors = ["Marco Napetti <nappa85@therocktrading.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
once_cell = "1.5"
regex = "1.4"
log = "0.4"
env_logger = "0.8"
structopt = "0.3"
