[package]
name = "fix_message"
version = "0.1.0"
authors = ["Marco Napetti <nappa85@therocktrading.com>"]
license = "MIT/Apache-2.0"
description = "FiX meets Serde"
categories = ["encoding", "financial"]
keywords = ["serde", "serialization", "fix"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
fixt11 = { path = "../fixt11" }
fix50sp2 = { path = "../fix50sp2" }
fix50sp1 = { path = "../fix50sp1" }
fix50 = { path = "../fix50" }
fix44 = { path = "../fix44" }
fix43 = { path = "../fix43" }
fix42 = { path = "../fix42" }
fix41 = { path = "../fix41" }

[dev-dependencies]
