[package]
name = "fix_message_viewer"
version = "0.1.0"
authors = ["Marco Napetti <nappa85@therocktrading.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fix_message = { path = "../fix_message" }
serde_fix = { path = "../serde_fix" }
structopt = "0.3"
