[package]
name = "serde_fix"
version = "0.1.0"
authors = ["Marco Napetti <nappa85@therocktrading.com>"]
license = "MIT/Apache-2.0"
description = "FiX meets Serde"
categories = ["encoding", "financial"]
keywords = ["serde", "serialization", "fix"]
edition = "2018"

[dependencies]
itoa = "0.4"
ryu = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
